[package]
name = "tink"
version = "0.0.1"
authors = ["denim2x <denim2x@cyberdude.com>"]
description = "Small crypto library for a safe, simple, agile and fast way of accomplishing common crypto tasks."
readme = "README.md"
license-file = "LICENSE"
keywords = ["boringssl"]
categories = ["cryptography"]
repository = "https://github.com/google/tink"
documentation = "https://github.com/google/tink"

# Exclude these test files in order to get under the minimum crates.io crate
# file size.
exclude = [
    "boringssl/boringssl/fuzz/*",
    "boringssl/boringssl/third_party/wycheproof_testvectors/*",
    "boringssl/boringssl/crypto/fipsmodule/*/*_tests.txt",
    "boringssl/boringssl/crypto/cipher_extra/test/*"
]
